@@ -31,8 +31,10 @@ require 'softlayer/NetworkComponent'
 require 'softlayer/ProductPackage'
 require 'softlayer/ProductItemCategory'
 require 'softlayer/ServerFirewall'
+require 'softlayer/ServerFirewallOrder'
 require 'softlayer/Ticket'
 require 'softlayer/VirtualServer'
 require 'softlayer/VirtualServerOrder'
 require 'softlayer/VirtualServerUpgradeOrder'
 require 'softlayer/VLANFirewall'
+require 'softlayer/VLANFirewallOrder'
